feat(wallet): enhance wallet tutorial with images, step-by-step guide, and security best practices
fix(layout): reorder API link in navigation menu

chore(package): remove peer dependencies from package-lock.json

chore(meta): add meta.json for documentation page structure

--- a/content/docs/api/auction/check-rounds.mdx
+++ b/content/docs/api/auction/check-rounds.mdx
@@ -2,9 +2,9 @@
 title: Check Rounds
 ---
 
-import { Callout } from 'fumadocs-ui/components/callout';
-import { Card, Cards } from 'fumadocs-ui/components/card';
+import { Callout } from "fumadocs-ui/components/callout";
+import { Card, Cards } from "fumadocs-ui/components/card";
 
-:::note
-The functions described is accessible only to users with ADMIN privileges.
-:::
+<Callout type="info" title="ADMIN privileges">
+  The functions described is accessible only to users with ADMIN privileges.
+</Callout>
