--- a/content/docs/tutorial/price.mdx
+++ b/content/docs/tutorial/price.mdx
@@ -3,26 +3,46 @@ title: NYYU Pricing
 description: Transparent fee structure for all services
 ---
 
-import { Callout } from 'fumadocs-ui/components/callout';
-import { Card, Cards } from 'fumadocs-ui/components/card';
-import { Step, Steps } from 'fumadocs-ui/components/steps';
+import { Callout } from "fumadocs-ui/components/callout";
+import { Card, Cards } from "fumadocs-ui/components/card";
+import { Step, Steps } from "fumadocs-ui/components/steps";
 
 ## NYYU Price Overview
 
 The NYYU Price section provides real-time data and insights into various financial assets, including cryptocurrencies, stocks, currencies, and commodities. This section is designed to help users stay informed about market trends, new listings, top volume assets, and top movers.
 
-![Price](/img/Price.png)
-
-
+<div className="my-6">
+  <img
+    src="/img/Price.png"
+    alt="NYYU Price Dashboard"
+    className="rounded-lg border border-border w-full"
+    style={{ maxHeight: "600px", objectFit: "contain" }}
+  />
+</div>
 
 ### Key Features
 
 <Cards>
-<Card title="Trending Coins" description="Displays the current price and percentage change of trending cryptocurrencies." />
-<Card title="New Listings" description="Highlights newly listed assets and their performance." />
-<Card title="Top Volume" description="Shows assets with the highest trading volume." />
-<Card title="Top Movers" description="Lists assets with the highest price movements, both positive and negative." />
-<Card title="News Feed" description="Provides the latest news and updates related to financial markets." />
+  <Card
+    title="Trending Coins"
+    description="Displays the current price and percentage change of trending cryptocurrencies."
+  />
+  <Card
+    title="New Listings"
+    description="Highlights newly listed assets and their performance."
+  />
+  <Card
+    title="Top Volume"
+    description="Shows assets with the highest trading volume."
+  />
+  <Card
+    title="Top Movers"
+    description="Lists assets with the highest price movements, both positive and negative."
+  />
+  <Card
+    title="News Feed"
+    description="Provides the latest news and updates related to financial markets."
+  />
 </Cards>
 
 ## Managing Your NYYU Price Dashboard
@@ -33,31 +53,70 @@ At the top of the Price section, you will find key market trends divided into th
 
 - **Trending Coins**: Displays the price and percentage change of the most trending cryptocurrencies.
 
-  ![Trending Coins](/img/TrendingCoins.png)
+<div className="my-4">
+  <img
+    src="/img/TrendingCoins.png"
+    alt="Trending Coins"
+    className="rounded-lg border border-border"
+    style={{ maxHeight: "200px", objectFit: "contain" }}
+  />
+</div>
 
 - **New Listings**: Highlights the latest assets added to the platform along with their price and percentage change.
 
-  ![New Listings](/img/NewListings.png)
+<div className="my-4">
+  <img
+    src="/img/NewListings.png"
+    alt="New Listings"
+    className="rounded-lg border border-border"
+    style={{ maxHeight: "200px", objectFit: "contain" }}
+  />
+</div>
 
 - **Top Volume**: Shows the assets with the highest trading volume in the market.
 
-  ![Top Volume](/img/TopVolume.png)
+<div className="my-4">
+  <img
+    src="/img/TopVolume.png"
+    alt="Top Volume"
+    className="rounded-lg border border-border"
+    style={{ maxHeight: "200px", objectFit: "contain" }}
+  />
+</div>
 
 - **Top Movers**: Lists the assets with the highest price movements, indicating significant market changes.
 
-  ![Top Movers](/img/TopMovers.png)
+<div className="my-4">
+  <img
+    src="/img/TopMovers.png"
+    alt="Top Movers"
+    className="rounded-lg border border-border"
+    style={{ maxHeight: "200px", objectFit: "contain" }}
+  />
+</div>
 
 ### Exploring Detailed Market Data
 
 Below the market trends section, you will find a comprehensive list of financial assets. Use the search bar and filters to find specific assets or categories, such as stocks, crypto, currencies, or commodities.
 
-![Market Data](/img/MarketData.png)
-
-
+<div className="my-4">
+  <img
+    src="/img/MarketData.png"
+    alt="Market Data Search and Filters"
+    className="rounded-lg border border-border"
+    style={{ maxHeight: "150px", objectFit: "contain" }}
+  />
+</div>
 
 <Cards>
-<Card title="Search Market" description="Quickly find specific assets using the search bar." />
-<Card title="Filter Options" description="Use the filter options to display all assets, stocks, crypto, currencies, or commodities." />
+  <Card
+    title="Search Market"
+    description="Quickly find specific assets using the search bar."
+  />
+  <Card
+    title="Filter Options"
+    description="Use the filter options to display all assets, stocks, crypto, currencies, or commodities."
+  />
 </Cards>
 
 ### Viewing Asset Details
@@ -65,20 +124,44 @@ Below the market trends section, you will find a comprehensive list of financial
 Each asset listed provides detailed information, including:
 
 <Cards>
-<Card title="Symbol and Name" description="The symbol and name of the asset." />
-<Card title="Price" description="Current price of the asset." />
-<Card title="Volume" description="The trading volume of the asset." />
-<Card title="24h Change" description="The percentage change in the asset's price over the last 24 hours." />
-<Card title="Market Cap" description="The total market capitalization of the asset." />
-<Card title="Last 7 Days" description="A mini chart showing the price trend of the asset over the last seven days." />
+  <Card
+    title="Symbol and Name"
+    description="The symbol and name of the asset."
+  />
+  <Card title="Price" description="Current price of the asset." />
+  <Card title="Volume" description="The trading volume of the asset." />
+  <Card
+    title="24h Change"
+    description="The percentage change in the asset's price over the last 24 hours."
+  />
+  <Card
+    title="Market Cap"
+    description="The total market capitalization of the asset."
+  />
+  <Card
+    title="Last 7 Days"
+    description="A mini chart showing the price trend of the asset over the last seven days."
+  />
 </Cards>
 
-![Asset Details](/img/AssetDetails.png)
-
-
+<div className="my-4">
+  <img
+    src="/img/AssetDetails.png"
+    alt="Asset Details"
+    className="rounded-lg border border-border"
+    style={{ maxHeight: "168px", objectFit: "contain" }}
+  />
+</div>
 
 ### Keeping Up with Market News
 
 On the right side of the Price section, there is a news feed that provides the latest updates and articles related to financial markets. This helps users stay informed about significant events and trends that could impact their investments.
 
-![News Feed](/img/NewsFeed.png)
+<div className="my-4">
+  <img
+    src="/img/NewsFeed.png"
+    alt="News Feed"
+    className="rounded-lg border border-border"
+    style={{ maxHeight: "256px", objectFit: "contain" }}
+  />
+</div>
